# strawberry-swapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  app.py  cli.py  db.sqlite3  fly.toml  pyproject.toml  schema.prisma  schema.py  settings.py  tables.py  utils.py
.github/: dependabot.yml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 23f69436a28d_.py  5a8987aaa87b_.py  7dc26a172a24_.py  7ecdbefa48c5_.py  e21e9f62c54d_.py
cli/: __init__.py  constants.py  importer.py
cli/queries/: films.graphql  introspection.graphql  pagination.graphql  people.graphql  planets.graphql  species.graphql  starships.graphql  vehicles.graphql
cli/utils/: query.py  wait_for_port.py
example_queries/: 01_basic_query.graphql  04_all_starships.graphql
importer/: cli.py
queries/: 02_nested_fields.graphql  03_nested_fields.graphql
scripts/: cache.json  compare_schema.py  import.py
swapi/: context.py  film.py  node.py  page_info.py  people.py  planets.py  species.py  starships.py  vehicles.py
swapi/utils/: connections.py  datetime.py
tests/: test_app.py
